fixed align of form table

--- a/form-manager/src/components/Home.scss
+++ b/form-manager/src/components/Home.scss
@@ -34,6 +34,9 @@
   margin-left: auto;
 }
 
+.table > tbody > tr > td {
+  vertical-align: middle;
+}
 
 
 
